<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:textSize="50sp"
        android:textAlignment="center"
        android:text="@string/title"
        />
    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alignmentMode="alignBounds"
        android:useDefaultMargins="false"
        tools:context=".MainActivity"
        android:columnCount="4"
        android:rowCount="9">

        <EditText
            android:id="@+id/equation_result"
            android:layout_width="match_parent"
            android:layout_columnSpan="4"
            android:layout_margin="10dp"
            android:textColor="@color/colorResult"
            android:text="@string/equation"
            android:textSize="26sp"
            android:layout_row="0"
            android:textAlignment="viewEnd"
            />

        <Button
            android:id="@+id/delete"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/delete"
            android:textSize="26sp"
            />

        <Button
            android:id="@+id/clear"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/clear"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/subtract"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/subtract"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/multiply"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/multiply"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/seven"
            android:layout_column="0"
            android:layout_row="2"
            android:text="7"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/eight"
            android:layout_column="1"
            android:layout_row="2"
            android:text="8"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/nine"
            android:layout_column="2"
            android:layout_row="2"
            android:text="9"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/add"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/add"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/four"
            android:layout_column="0"
            android:layout_row="3"
            android:text="4"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/five"
            android:layout_column="1"
            android:layout_row="3"
            android:text="5"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/six"
            android:layout_column="2"
            android:layout_row="3"
            android:text="6"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/minus"
            android:layout_column="3"
            android:layout_row="3"
            android:text="@string/minus"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/one"
            android:layout_column="0"
            android:layout_row="4"
            android:text="1"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/two"
            android:layout_column="1"
            android:layout_row="4"
            android:text="2"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/three"
            android:layout_column="2"
            android:layout_row="4"
            android:text="3"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/squart"
            android:layout_column="3"
            android:layout_row="4"
            android:text="@string/square_root"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/point"
            android:layout_column="2"
            android:layout_row="5"
            android:text="@string/point"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/equal"
            android:layout_column="3"
            android:layout_row="5"
            android:text="@string/equal"
            android:textSize="26sp"
            />

        <Button
            android:id="@+id/zero"
            android:layout_width="175dp"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:text="0"
            android:textSize="26sp" />
    </GridLayout>
</LinearLayout>